<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    android:theme="@android:style/Theme.Light"
    tools:context=".LoginActivity">
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:translationZ="1dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="@style/time"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="233dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cellular_connection"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/wifi"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/battery"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/bt_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:background="@drawable/btleft"
        android:elevation="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="300dp"
        />
    <TextView
        android:id="@+id/title_forgot_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_p"
        android:textAppearance="@style/verification"

        app:layout_constraintTop_toBottomOf="@id/bt_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="39dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="91dp"

        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tittle_u_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle_u_verification"
        android:textAppearance="@style/tittle_u_verification"

        app:layout_constraintTop_toBottomOf="@id/title_forgot_p"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="49.5dp"
        android:layout_marginEnd="39.5dp"
        android:textAlignment="center"

        tools:ignore="MissingConstraints"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/via_sms"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/rectangle_select_via_email_or_sms"

        app:layout_constraintTop_toBottomOf="@+id/tittle_u_verification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"

        tools:ignore="MissingConstraints">
        <View
            android:id="@+id/icon_sms"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_select_via_sms"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="17dp"
            />
        <TextView
            android:id="@+id/txt_via_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/via_sms"
            android:textAppearance="@style/via"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_sms"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="46dp"
            />
        <TextView
            android:id="@+id/sms_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/via_s_e"
            android:text="@string/sms_number"

            app:layout_constraintTop_toBottomOf="@+id/txt_via_sms"
            app:layout_constraintStart_toEndOf="@+id/icon_sms"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="23dp"
            android:layout_marginStart="8dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/via_email"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/rectangle_select_via_email_or_sms"

        app:layout_constraintTop_toBottomOf="@+id/via_sms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"

        tools:ignore="MissingConstraints">
        <View
            android:id="@+id/icon_email"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_select_via_email"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="17dp"
            />
        <TextView
            android:id="@+id/txt_via_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/via_email"
            android:textAppearance="@style/via"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_email"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="46dp"
            />
        <TextView
            android:id="@+id/email_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/via_s_e"
            android:text="@string/email_address"

            app:layout_constraintTop_toBottomOf="@+id/txt_via_email"
            app:layout_constraintStart_toEndOf="@+id/icon_email"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="23dp"
            android:layout_marginStart="8dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:id="@+id/bt_send_otp"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/save"

        android:text="@string/bt_continue"
        android:textColor="@color/white"
        android:textSize="16sp"

        app:layout_constraintBottom_toTopOf="@+id/home_indica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="37dp"

        tools:ignore="MissingConstraints"/>
    <View
        android:id="@+id/home_indica"
        android:layout_width="134dp"
        android:layout_height="5dp"
        android:background="@drawable/home_indica"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="8dp"

        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>