<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:theme="@android:style/Theme.Light"
    tools:context=".LoginActivity">
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:translationZ="1dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="@style/time"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="233dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cellular_connection"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/wifi"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/battery"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_change"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/rectangle_8"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp">
        <Button
            android:id="@+id/bt_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btleft"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="13dp"
            tools:ignore="NotSibling" />
        <TextView
            android:id="@+id/txt_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/txt_tittle"
            android:text="@string/txt_change"

            app:layout_constraintTop_toBottomOf="@+id/top"
            app:layout_constraintStart_toEndOf="@+id/bt_change"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="66.5dp"
            android:layout_marginEnd="112.5dp"
            tools:ignore="NotSibling" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title_current_p"
        android:layout_width="256dp"
        android:layout_height="wrap_content"

        android:text="@string/current_p"
        android:textAppearance="@style/tittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_change"

        android:layout_marginStart="32dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="87dp"

        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/current_p"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/input"
        android:hint="@string/holder"
        android:padding="17.02dp"
        android:inputType="textPassword"
        style="@style/txt_holder"

        app:layout_constraintTop_toBottomOf="@id/title_current_p"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="36dp"

        tools:ignore="MissingConstraints"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/eye_off"

        app:layout_constraintTop_toTopOf="@id/current_p"
        app:layout_constraintBottom_toBottomOf="@id/current_p"
        app:layout_constraintStart_toStartOf="@id/current_p"
        app:layout_constraintEnd_toEndOf="@id/current_p"

        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="268dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:id="@+id/title_new_p"
        android:layout_width="256dp"
        android:layout_height="wrap_content"

        android:text="@string/new_p"
        android:textAppearance="@style/tittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_p"


        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="87dp"

        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/new_p"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/input"
        android:hint="@string/holder"
        android:padding="17.02dp"
        android:inputType="textPassword"
        style="@style/txt_holder"

        app:layout_constraintTop_toBottomOf="@id/title_new_p"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="36dp"

        tools:ignore="MissingConstraints"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/eye_off"

        app:layout_constraintTop_toTopOf="@id/new_p"
        app:layout_constraintBottom_toBottomOf="@id/new_p"
        app:layout_constraintStart_toStartOf="@id/new_p"
        app:layout_constraintEnd_toEndOf="@id/new_p"

        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="268dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fail_p"
        android:textAppearance="@style/txt_fail"

        app:layout_constraintTop_toBottomOf="@id/new_p"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="3dp"
        android:layout_marginStart="206dp"
        android:layout_marginEnd="37dp"

        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/title_re_e_p"
        android:layout_width="256dp"
        android:layout_height="wrap_content"

        android:text="@string/re_e_p"
        android:textAppearance="@style/tittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_p"


        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="87dp"

        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/re_e_p"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/input"
        android:hint="@string/holder"
        android:padding="17.02dp"
        android:inputType="textPassword"
        style="@style/txt_holder"

        app:layout_constraintTop_toBottomOf="@id/title_re_e_p"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="36dp"

        tools:ignore="MissingConstraints"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/eye_off"

        app:layout_constraintTop_toTopOf="@id/re_e_p"
        app:layout_constraintBottom_toBottomOf="@id/re_e_p"
        app:layout_constraintStart_toStartOf="@id/re_e_p"
        app:layout_constraintEnd_toEndOf="@id/re_e_p"

        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="268dp"
        android:layout_marginEnd="16dp"/>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/save"

        android:elevation="10dp"
        android:letterSpacing="0.01"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/Inter_Regular"

        android:layout_marginTop="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/re_e_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/task_menu"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/task_menu"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/task_menu"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <!-- Guideline 1 (25% từ trái) -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="103dp" />

        <!-- Guideline 2 (50% từ trái) -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <!-- Guideline 3 (75% từ trái) -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/home"
                android:textAppearance="@style/menuno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/order"
                android:textAppearance="@style/menuno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/history"
                android:textAppearance="@style/menuno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/menu"
                android:textAppearance="@style/menuyes" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>